# KQI-Maakmaay

./: .gitignore  README.md  main.py  pyproject.toml  tree.md
core/: entities.py  repositories.py  use_cases.py
infrastructure/: file_operations.py
presentation/: gui.py
src/: __init__.py
src/application/: main_pipeline.py
src/application/dtos/: cell_id_dto.py  kqi_dto.py  result_dto.py
src/application/services/: aggregation_service.py  file_service.py  kqi_service.py  parser_service.py
src/data/datasources/: csv_gz_datasource.py  kqi_datasource.py  mapping_datasource.py
src/data/models/: cell_id_model.py  kqi_model.py  mapping_model.py
src/data/repositories/: csv_repository_impl.py  kqi_repository_impl.py  mapping_repository_impl.py
src/domain/: __init__.py
src/domain/entities/: cell_identifier.py  kqi_raw_data.py  source_mapping.py
src/domain/repositories/: csv_repository.py  kqi_repository.py  mapping_repository.py
src/domain/use_cases/: calculate_metrics_usecase.py  extract_cell_id_usecase.py  group_by_mnc_usecase.py  process_kqi_usecase.py
