[project]
name = "kqi-maakmaay"
version = "0.1.0"
description = ""
authors = [
    {name = "daiyabarus",email = "daiyabarus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
    "nuitka (>=2.8.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
